fix: avoid to close client on data source closure